const SteamUser = require('steam-user');
const protobuf = require('protobufjs');
const Long = require('protobufjs').util.Long;
const fs = require('fs');
const path = require('path');

/**
 * v6.0 é…ç½®æ®‹ç•™æ¸…ç†å·¥å…·ï¼ˆç‹¬ç«‹è¿è¡Œï¼Œä¸ä¾èµ–æŒ‚æœºè½¦é˜Ÿè¿›ç¨‹ï¼‰
 * ç”¨æ³•:
 *   node commands/cleanup_config.js config_001 [intervalMs] [maxInFlight]
 *
 * è¡Œä¸º:
 * - é€ä¸ªè´¦å·ç™»å½•ï¼ˆå¯é€‰ä»£ç†ï¼‰
 * - å¯åŠ¨ Dota2 å¹¶è¿æ¥ GC
 * - å‘é€ AbandonCurrentGame + PracticeLobbyLeave
 * - ç™»å‡º
 *
 * è¯´æ˜:
 * - followers.txt ä¸åŒ…å« shared_secretï¼›è‹¥è´¦å·éœ€è¦ Steam Guard/2FAï¼Œæœ¬å·¥å…·ä¼šè·³è¿‡è¯¥è´¦å·ï¼ˆè®°å½•å¤±è´¥ï¼‰ã€‚
 * - æœ¬å·¥å…·é‡‡ç”¨â€œæµæ°´çº¿â€æ¨¡å¼ï¼šæ¯ intervalMs å¯åŠ¨ 1 ä¸ªæ¸…ç†ä»»åŠ¡ï¼ˆä¸ä¼šä¸€å£æ°”å¹¶å‘å…¨å¼€ï¼‰ï¼Œä½†ä»»åŠ¡ä¹‹é—´å…è®¸é‡å ï¼ˆä¸ç­‰ä¸Šä¸€ä¸ªç»“æŸï¼‰ã€‚
 * - maxInFlight ç”¨äºé™åˆ¶åŒæ—¶åœ¨é€”ä»»åŠ¡æ•°é‡ï¼Œé˜²æ­¢å †ç§¯è¿‡å¤šå¯¼è‡´èµ„æºè¢«æ‰“æ»¡ã€‚
 */

// GC æ¶ˆæ¯ ID
const k_EMsgGCAbandonCurrentGame = 7035;
const k_EMsgGCPracticeLobbyLeave = 7040;
const k_EMsgGCClientHello = 4006;
const k_EMsgGCClientConnectionStatus = 4004;
const k_EMsgProtoMask = 0x80000000;

const projectRoot = path.join(__dirname, '..');

const configName = process.argv[2];
const intervalMs = Math.max(50, Math.min(2000, Number(process.argv[3] || 100))); // é»˜è®¤ 0.1 ç§’ä¸€ä¸ª
const maxInFlight = Math.max(1, Math.min(200, Number(process.argv[4] || 30)));   // é»˜è®¤æœ€å¤š 30 ä¸ªåœ¨é€”

if (!configName || !/^config_\d{3}$/.test(configName)) {
  console.log('ç”¨æ³•: node commands/cleanup_config.js config_001 [intervalMs] [maxInFlight]');
  process.exit(1);
}

// è¯»å– v6 ä¸»å·é…ç½®ï¼ˆç”¨äºå…±äº«æ•°æ®ç›®å½• + ä»£ç†æ± ï¼‰
function loadLeadersConfig() {
  const p = path.join(projectRoot, 'config', 'config_leaders.json');
  const raw = fs.readFileSync(p, 'utf8').replace(/^\uFEFF/, '');
  return JSON.parse(raw);
}

// è¯»å– followers.txt
function loadFollowers(configNameArg) {
  const followersPath = path.join(projectRoot, 'config', 'farm', configNameArg, 'followers.txt');
  if (!fs.existsSync(followersPath)) {
    throw new Error(`é…ç½®ä¸å­˜åœ¨: ${followersPath}`);
  }
  const content = fs.readFileSync(followersPath, 'utf8').replace(/^\uFEFF/, '');
  return content
    .split('\n')
    .map(l => l.trim())
    .filter(l => l && l.includes(',') && !l.startsWith('#'))
    .map(l => {
      const [username, password] = l.split(',');
      return { username: (username || '').trim(), password: (password || '').trim() };
    })
    .filter(x => x.username && x.password);
}

function ensureDir(p) {
  if (!fs.existsSync(p)) fs.mkdirSync(p, { recursive: true });
}

// åŠ è½½ Proto
let CMsgClientHello;
function loadProto() {
  const root = new protobuf.Root();
  root.resolvePath = function (origin, target) {
    if (fs.existsSync(target)) return target;
    const p1 = path.join(projectRoot, 'Protobufs', target);
    if (fs.existsSync(p1)) return p1;
    const p2 = path.join(projectRoot, 'Protobufs', 'dota2', target);
    if (fs.existsSync(p2)) return p2;
    const p3 = path.join(projectRoot, 'Protobufs', 'google', 'protobuf', target);
    if (fs.existsSync(p3)) return p3;
    return target;
  };

  root.loadSync(path.join(projectRoot, 'Protobufs/google/protobuf/descriptor.proto'));
  root.loadSync(path.join(projectRoot, 'Protobufs/dota2/networkbasetypes.proto'));
  root.loadSync(path.join(projectRoot, 'Protobufs/dota2/gcsdk_gcmessages.proto'));
  root.loadSync(path.join(projectRoot, 'Protobufs/dota2/dota_gcmessages_client.proto'));

  CMsgClientHello = root.lookupType('CMsgClientHello');
}

function pickFollowerProxy(leadersConfig) {
  const proxies = leadersConfig.proxies || [];
  const leaderProxyCount = leadersConfig.global_settings?.leader_proxy_count || 10;
  const followerProxies = proxies.slice(leaderProxyCount);
  if (followerProxies.length === 0) return null;
  return followerProxies[Math.floor(Math.random() * followerProxies.length)];
}

async function main() {
  const leadersConfig = loadLeadersConfig();
  const sharedDataPath = leadersConfig.global_settings?.shared_steam_data_path || '../shared_steam_data';
  const steamDataDir = path.resolve(projectRoot, sharedDataPath);
  ensureDir(steamDataDir);

  loadProto();

  const accounts = loadFollowers(configName);
  console.log(`[CleanupConfig] é…ç½®: ${configName} | è´¦å·æ•°: ${accounts.length} | é—´éš”: ${intervalMs}ms/ä¸ª | åœ¨é€”ä¸Šé™: ${maxInFlight}`);
  if (accounts.length === 0) {
    console.log('[CleanupConfig] followers.txt ä¸ºç©ºæˆ–æ— æœ‰æ•ˆè´¦å·ï¼Œé€€å‡ºã€‚');
    process.exit(0);
  }

  let processed = 0;
  let success = 0;
  let failed = 0;
  let skippedGuard = 0;

  const queue = accounts.slice(); // å¾…å¯åŠ¨

  function printStats() {
    const percent = ((processed / accounts.length) * 100).toFixed(1);
    console.log(`[Stats] æ€»:${accounts.length} | âœ…æˆåŠŸ:${success} | âŒå¤±è´¥:${failed} | ğŸ”è·³è¿‡:${skippedGuard} | å·²å¤„ç†:${processed} | è¿›åº¦:${percent}%`);
  }

  // æµæ°´çº¿è°ƒåº¦ï¼šæ¯ intervalMs å¯åŠ¨ä¸€ä¸ªï¼Œå…è®¸ä»»åŠ¡é‡å ï¼Œä½†é™åˆ¶åœ¨é€”æ•°é‡
  let inFlight = 0;
  let started = 0;

  const maybeDone = () => {
    if (processed >= accounts.length && inFlight === 0) {
      printStats();
      console.log('[CleanupConfig] å®Œæˆã€‚');
      process.exit(0);
    }
  };

  const onResult = (ok) => {
    processed++;
    inFlight = Math.max(0, inFlight - 1);
    if (ok && ok.ok) success++;
    else {
      if (ok && ok.reason === 'steam_guard') skippedGuard++;
      else failed++;
    }
    if (processed % 50 === 0 || processed === accounts.length) printStats();
    maybeDone();
  };

  const tick = () => {
    // å¦‚æœéƒ½å·²å¯åŠ¨ï¼Œåˆ™åœæ­¢å‘å°„ï¼›ç­‰å¾…åœ¨é€”ç»“æŸ
    if (queue.length === 0) {
      clearInterval(timer);
      maybeDone();
      return;
    }
    // åœ¨é€”å¤ªå¤šï¼Œè·³è¿‡æœ¬æ¬¡
    if (inFlight >= maxInFlight) return;

    const acc = queue.shift();
    if (!acc) return;
    inFlight++;
    started++;

    cleanupOne(acc, leadersConfig, steamDataDir)
      .then(onResult)
      .catch((e) => onResult({ ok: false, reason: e?.message || 'error' }));
  };

  // ç«‹å³å¯åŠ¨ä¸€ä¸ªï¼Œé¿å…ç­‰ç¬¬ä¸€ä¸ª interval
  tick();
  const timer = setInterval(tick, intervalMs);
}

function cleanupOne(account, leadersConfig, steamDataDir) {
  return new Promise((resolve) => {
    const proxy = pickFollowerProxy(leadersConfig);
    const client = new SteamUser({
      dataDirectory: steamDataDir,
      httpProxy: proxy || undefined,
      autoRelogin: false
    });

    let finished = false;
    const finish = (result) => {
      if (finished) return;
      finished = true;
      // âš ï¸ ä¸è¦åœ¨è¿™é‡Œå½»åº•ç§»é™¤æ‰€æœ‰ç›‘å¬åå°±æ”¾ä»» client å­˜æ´»ï¼šåº•å±‚ socket å¯èƒ½åœ¨ logOff åä»å¼‚æ­¥æŠ›é”™ï¼Œ
      // å¦‚æœæ²¡æœ‰ error ç›‘å¬ä¼šå¯¼è‡´è¿›ç¨‹å´©æºƒï¼ˆUnhandled 'error' eventï¼‰ã€‚
      // å¤„ç†ç­–ç•¥ï¼šå°½é‡æ¸…ç†éå…³é”®ç›‘å¬ï¼Œä½†å§‹ç»ˆä¿ç•™ä¸€ä¸ªå…œåº• error ç›‘å¬ã€‚
      try { client.removeAllListeners(); } catch (e) {}
      try { client.on('error', () => {}); } catch (e) {}
      try { client.logOff(); } catch (e) {}
      resolve(result);
    };

    const timeout = setTimeout(() => finish({ ok: false, reason: 'timeout' }), 20000);

    client.on('steamGuard', () => {
      // æ²¡æœ‰ shared_secretï¼Œæ— æ³•è‡ªåŠ¨å¤„ç†ï¼Œç›´æ¥è·³è¿‡
      clearTimeout(timeout);
      finish({ ok: false, reason: 'steam_guard' });
    });

    client.on('loggedOn', () => {
      client.setPersona(SteamUser.EPersonaState.Invisible);
      client.gamesPlayed([570]);
    });

    client.on('appLaunched', (appid) => {
      if (appid !== 570) return;
      try {
        const payload = { client_session_id: 0, engine: 2, client_launcher: 0 };
        const message = CMsgClientHello.create(payload);
        const buffer = CMsgClientHello.encode(message).finish();
        client.sendToGC(570, k_EMsgGCClientHello | k_EMsgProtoMask, {}, buffer);
      } catch (e) {}
    });

    client.on('receivedFromGC', (appid, msgType) => {
      if (appid !== 570) return;
      const cleanMsgType = msgType & ~k_EMsgProtoMask;
      if (cleanMsgType === k_EMsgGCClientConnectionStatus) {
        try {
          client.sendToGC(570, k_EMsgGCAbandonCurrentGame | k_EMsgProtoMask, {}, Buffer.alloc(0));
          client.sendToGC(570, k_EMsgGCPracticeLobbyLeave | k_EMsgProtoMask, {}, Buffer.alloc(0));
        } catch (e) {}

        clearTimeout(timeout);
        setTimeout(() => finish({ ok: true }), 500);
      }
    });

    client.on('error', () => {
      clearTimeout(timeout);
      finish({ ok: false, reason: 'steam_error' });
    });

    client.logOn({
      accountName: account.username,
      password: account.password
    });
  });
}

main().catch((e) => {
  console.error(`[CleanupConfig] å¯åŠ¨å¤±è´¥: ${e.message}`);
  process.exit(1);
});

