const SteamUser = require('steam-user');
const SteamTotp = require('steam-totp');
const protobuf = require('protobufjs');
const Long = require('protobufjs').util.Long;
const fs = require('fs');
const path = require('path');

console.log("=".repeat(60));
console.log("   ðŸ  å…¬å¼€æˆ¿é—´åˆ›å»ºå·¥å…·");
console.log("   ç”¨é€”: è®©å¤§å·åˆ›å»ºä¸€ä¸ªæ— å¯†ç çš„å…¬å¼€æˆ¿é—´");
console.log("=".repeat(60) + "\n");

// é¡¹ç›®æ ¹ç›®å½•
const projectRoot = path.join(__dirname, '..');

// [æ–°å¢ž] è¯»å–ä»£ç†åˆ—è¡¨
let proxies = [];
try {
    const proxiesPath = path.join(projectRoot, 'data', 'proxies.txt');
    if (fs.existsSync(proxiesPath)) {
        const content = fs.readFileSync(proxiesPath, 'utf8');
        proxies = content.split('\n')
            .map(line => line.trim())
            .filter(line => line.length > 0);
        if (proxies.length > 0) {
            console.log(`âœ… åŠ è½½äº† ${proxies.length} ä¸ªä»£ç† IP\n`);
        }
    }
} catch (e) {
    console.error("âš ï¸ è¯»å–ä»£ç†æ–‡ä»¶å¤±è´¥: " + e.message);
}

// æ¶ˆæ¯ ID å®šä¹‰
const k_EMsgGCClientHello = 4006;
const k_EMsgGCClientConnectionStatus = 4004;
const k_EMsgGCPracticeLobbyCreate = 7038;
const k_EMsgGCPracticeLobbyLeave = 7040;
const k_EMsgGCReadyUp = 7070;
const k_EMsgProtoMask = 0x80000000;

// SOCache æ¶ˆæ¯ ID
const k_EMsgGCSOCacheSubscribed = 24;
const k_EMsgGCSOSingleObject = 25;
const k_EMsgGCSOMultipleObjects = 26;
const SOCACHE_TYPE_LOBBY = 2004;

const DOTALobbyReadyState = {
    DOTALobbyReadyState_UNDECLARED: 0,
    DOTALobbyReadyState_NOT_READY: 1,
    DOTALobbyReadyState_READY: 2
};

// è‡ªç„¶çš„æˆ¿é—´åç§°åˆ—è¡¨ï¼ˆéšæœºé€‰æ‹©ï¼‰
const NATURAL_ROOM_NAMES = [
    "æ¥çŽ©å•Š",
    "å¼€é»‘",
    "ä¼‘é—²å±€",
    "æ–°æ‰‹å‹å¥½",
    "è½»æ¾çŽ©",
    "éšä¾¿çŽ©çŽ©",
    "ç­‰äººä¸­",
    "å¿«ä¹æ¸¸æˆ",
    "ä¸€èµ·çŽ©",
    "æ¬¢è¿ŽåŠ å…¥",
    "å¼€å¿ƒå±€",
    "ç»ƒä¹ ",
    "å¨±ä¹",
    "ç»„é˜Ÿ",
    "æ¥ä¸€å±€",
    "èŒæ–°å±€",
    "å¤§å®¶æ¥çŽ©",
    "æœ‰äººå—",
    "è¿›æ¥çŽ©",
    "ä¼‘é—²"
];

// å…¨å±€ Proto å®šä¹‰
let CMsgClientHello, CMsgPracticeLobbyCreate, CMsgPracticeLobbySetDetails, CMsgReadyUp, CSODOTALobby;
let CMsgSOSingleObject, CMsgSOMultipleObjects, CMsgSOCacheSubscribed;

// åŠ è½½ Proto
try {
    const root = new protobuf.Root();
    root.resolvePath = function(origin, target) {
        if (fs.existsSync(target)) return target;
        const pathInProtobufs = path.join(projectRoot, "Protobufs", target);
        if (fs.existsSync(pathInProtobufs)) return pathInProtobufs;
        const pathInDota2 = path.join(projectRoot, "Protobufs", "dota2", target);
        if (fs.existsSync(pathInDota2)) return pathInDota2;
        return target;
    };

    root.loadSync(path.join(projectRoot, "Protobufs/google/protobuf/descriptor.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/networkbasetypes.proto")); 
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/network_connection.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/steammessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/gcsdk_gcmessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_shared_enums.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_client_enums.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/base_gcmessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_common_lobby.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client_match_management.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client.proto"));

    CMsgClientHello = root.lookupType("CMsgClientHello");
    CMsgPracticeLobbyCreate = root.lookupType("CMsgPracticeLobbyCreate");
    CMsgPracticeLobbySetDetails = root.lookupType("CMsgPracticeLobbySetDetails");
    CMsgReadyUp = root.lookupType("CMsgReadyUp");
    CSODOTALobby = root.lookupType("CSODOTALobby");
    CMsgSOSingleObject = root.lookupType("CMsgSOSingleObject");
    CMsgSOMultipleObjects = root.lookupType("CMsgSOMultipleObjects");
    CMsgSOCacheSubscribed = root.lookupType("CMsgSOCacheSubscribed");
    
    console.log("âœ… Proto æ–‡ä»¶åŠ è½½æˆåŠŸ\n");
} catch (e) {
    console.error("âŒ Proto åŠ è½½å¤±è´¥: " + e.message);
    process.exit(1);
}

function getHardwareSpecs() {
    // éšæœºåŒ–ç¡¬ä»¶é…ç½®ï¼Œé¿å…æ£€æµ‹
    const cpuOptions = [4, 6, 8, 12, 16];
    const memOptions = [8, 16, 32];
    return {
        logical_processors: cpuOptions[Math.floor(Math.random() * cpuOptions.length)],
        cpu_cycles_per_second: Long.fromNumber(2500000000 + Math.random() * 2000000000),
        total_physical_memory: Long.fromNumber(memOptions[Math.floor(Math.random() * memOptions.length)] * 1073741824),
        is_64_bit_os: true,
        upload_measurement: Long.fromNumber(5000000 + Math.random() * 10000000),
        prefer_not_host: false
    };
}

// è¯»å–é…ç½®
let config;
try {
    const configPath = path.join(projectRoot, 'config', 'config.json');
    const rawContent = fs.readFileSync(configPath, 'utf8').replace(/^\uFEFF/, '');
    config = JSON.parse(rawContent);
} catch (e) {
    console.error("âŒ è¯»å–é…ç½®å¤±è´¥: " + e.message);
    process.exit(1);
}

if (!config.fleets || config.fleets.length === 0) {
    console.error("âŒ æœªæ‰¾åˆ°è½¦é˜Ÿé…ç½®");
    process.exit(1);
}

// èŽ·å–ä¸»å·åˆ—è¡¨
let leaders = [];
if (Array.isArray(config.fleets[0].leader)) {
    leaders = config.fleets[0].leader;
} else {
    config.fleets.forEach((fleet) => {
        leaders.push(fleet.leader);
    });
}

console.log(`ðŸ“‹ å¯ç”¨çš„å¤§å·åˆ—è¡¨:\n`);
leaders.forEach((leader, idx) => {
    console.log(`   [${idx + 1}] ${leader.username}`);
});

// ä»Žå‘½ä»¤è¡Œå‚æ•°èŽ·å–è¦ä½¿ç”¨çš„å¤§å·ç¼–å· (é»˜è®¤ç¬¬ä¸€ä¸ª)
const args = process.argv.slice(2);
let leaderIndex = 0;

if (args.length > 0) {
    const userInput = parseInt(args[0]);
    if (isNaN(userInput) || userInput < 1 || userInput > leaders.length) {
        console.error(`\nâŒ æ— æ•ˆçš„å¤§å·ç¼–å·: ${args[0]}`);
        console.log(`ðŸ’¡ ç”¨æ³•: node create_public_lobby.js [å¤§å·ç¼–å·]`);
        console.log(`   ä¾‹å¦‚: node create_public_lobby.js 1   (ä½¿ç”¨ç¬¬ä¸€ä¸ªå¤§å·)`);
        console.log(`   ä¾‹å¦‚: node create_public_lobby.js 2   (ä½¿ç”¨ç¬¬äºŒä¸ªå¤§å·)\n`);
        process.exit(1);
    }
    leaderIndex = userInput - 1;
}

const leader = leaders[leaderIndex];
const globalSettings = config.global_settings;

// æˆ¿é—´åç§°ä¸ºç©ºï¼ˆé¿å…æœºæ¢°åŒ–æè¿°ï¼‰
const roomName = "";

console.log(`\n${"=".repeat(60)}`);
console.log(`ðŸŽ¯ ä½¿ç”¨å¤§å·: ${leader.username}`);
console.log(`ðŸ  æˆ¿é—´åç§°: (ç©º)`);
console.log(`ðŸ”“ æˆ¿é—´ç±»åž‹: å…¬å¼€ (æ— å¯†ç )`);
console.log(`${"=".repeat(60)}\n`);

// åˆ›å»º Steam å®¢æˆ·ç«¯
const sharedDataPath = globalSettings.shared_steam_data_path || "../shared_steam_data";
const steamDataDir = path.resolve(projectRoot, sharedDataPath);

const steamOptions = {
    dataDirectory: steamDataDir
};

// [å…³é”®] ä¸»å·ä½¿ç”¨å›ºå®šä»£ç†ï¼šä¸»å·1ç”¨ä»£ç†1ï¼Œä¸»å·2ç”¨ä»£ç†2ï¼Œä¾æ­¤ç±»æŽ¨ï¼ˆä¸Ž index.js ä¿æŒä¸€è‡´ï¼‰
if (proxies.length > 0) {
    steamOptions.httpProxy = proxies[leaderIndex];
    const proxyDisplay = proxies[leaderIndex].replace(/:[^:@]+@/, ':****@');
    console.log(`ðŸ›¡ï¸ ä½¿ç”¨å›ºå®šä»£ç† (ä»£ç† #${leaderIndex + 1}): ${proxyDisplay}\n`);
} else {
    console.log(`â„¹ï¸ æœªé…ç½®ä»£ç†ï¼Œä½¿ç”¨æœ¬åœ° IP\n`);
}

const client = new SteamUser(steamOptions);

// çŠ¶æ€å˜é‡
let is_gc_connected = false;
let currentLobbyId = null;
let ready_up_heartbeat = null;

// CRC æ•°æ®
const knownCrc = "1396649696593898392";
const knownTimestamp = 1763646905;

function log(msg) {
    console.log(`[${leader.username}] ${msg}`);
}

function sendHello() {
    try {
        const payload = { client_session_id: 0, engine: 2, client_launcher: 0 };
        const message = CMsgClientHello.create(payload);
        const buffer = CMsgClientHello.encode(message).finish();
        client.sendToGC(globalSettings.target_app_id, k_EMsgGCClientHello | k_EMsgProtoMask, {}, buffer);
    } catch (err) {}
}

function createPublicLobby() {
    log(`ðŸ  æ­£åœ¨åˆ›å»ºå…¬å¼€æˆ¿é—´...`);
    log(`   è‡ªå®šä¹‰æ¸¸æˆID: ${globalSettings.custom_game_id}`);
    log(`   æœåŠ¡å™¨åŒºåŸŸ: ${globalSettings.server_region}`);
    
    try {
        const gameIdLong = Long.fromString(globalSettings.custom_game_id, true);
        
        // å…³é”®ï¼šå…¬å¼€æˆ¿é—´é…ç½®
        const detailsPayload = {
            customGameId: gameIdLong,
            gameName: roomName,                    // ç©ºåç§°
            serverRegion: globalSettings.server_region,
            gameMode: 15,
            customMaxPlayers: globalSettings.max_players_per_room || 24,
            customMinPlayers: 1,
            allowSpectating: true,
            allchat: true,
            fillWithBots: false,
            allowCheats: false,
            visibility: 0,                         // å…¬å¼€å¯è§
            passKey: "",                           // âœ… æ— å¯†ç ï¼
            customMapName: "zudui_team_map",
            customGameCrc: Long.fromString(knownCrc, true),
            customGameTimestamp: knownTimestamp
        };
        
        const lobbyDetails = CMsgPracticeLobbySetDetails.create(detailsPayload);

        const createPayload = {
            searchKey: "",
            passKey: "",                           // âœ… æ— å¯†ç ï¼
            clientVersion: 0,
            lobbyDetails: lobbyDetails
        };

        const message = CMsgPracticeLobbyCreate.create(createPayload);
        const buffer = CMsgPracticeLobbyCreate.encode(message).finish();
        
        log(`ðŸ“¤ å‘é€åˆ›å»ºæˆ¿é—´è¯·æ±‚ (æ¶ˆæ¯ID: 7038)...`);
        client.sendToGC(globalSettings.target_app_id, k_EMsgGCPracticeLobbyCreate | k_EMsgProtoMask, {}, buffer);
        log(`âœ… åˆ›å»ºæˆ¿é—´è¯·æ±‚å·²å‘é€ï¼Œç­‰å¾… GC å“åº”...`);
        
    } catch (err) {
        log(`âŒ åˆ›å»ºæˆ¿é—´å¤±è´¥: ${err.message}`);
        console.error(err);
    }
}

function sendReadyUp(lobbyId) {
    try {
        const payload = {
            state: DOTALobbyReadyState.DOTALobbyReadyState_READY,
            hardware_specs: getHardwareSpecs()
        };
        if (lobbyId) payload.ready_up_key = lobbyId;
        const message = CMsgReadyUp.create(payload);
        const buffer = CMsgReadyUp.encode(message).finish();
        client.sendToGC(globalSettings.target_app_id, k_EMsgGCReadyUp | k_EMsgProtoMask, {}, buffer);
    } catch (err) {}
}

function processLobbyData(objectData) {
    if (!objectData || objectData.length === 0) {
        log(`âš ï¸ processLobbyData: æ•°æ®ä¸ºç©º`);
        return;
    }
    
    log(`ðŸ” è§£æž Lobby æ•°æ® (${objectData.length} bytes)...`);
    
    try {
        const lobby = CSODOTALobby.decode(objectData);
        
        log(`   lobbyId: ${lobby.lobbyId ? lobby.lobbyId.toString() : 'null'}`);
        log(`   gameName: "${lobby.gameName || ''}"`);
        log(`   state: ${lobby.state}`);
        log(`   customGameId: ${lobby.customGameId ? lobby.customGameId.toString() : 'null'}`);
        
        if (lobby.lobbyId) {
            currentLobbyId = lobby.lobbyId;
            const gameName = lobby.gameName || '';
            const memberCount = (lobby.allMembers || []).length;
            
            log(`âœ… å…¬å¼€æˆ¿é—´åˆ›å»ºæˆåŠŸ!`);
            log(`   æˆ¿é—´å: "${gameName || '(ç©º)'}"`);
            log(`   æˆ¿é—´ID: ${currentLobbyId.toString()}`);
            log(`   å½“å‰äººæ•°: ${memberCount}`);
            console.log(`\n${"=".repeat(60)}`);
            console.log(`ðŸŽ‰ å…¬å¼€æˆ¿é—´å·²åˆ›å»ºå¹¶ä¿æŒåœ¨çº¿ä¸­...`);
            console.log(`   æŒ‰ Ctrl+C é€€å‡º`);
            console.log(`${"=".repeat(60)}\n`);
            
            // å¯åŠ¨å¿ƒè·³
            if (ready_up_heartbeat) clearInterval(ready_up_heartbeat);
            ready_up_heartbeat = setInterval(() => {
                sendReadyUp(currentLobbyId);
                log(`ðŸ’“ å¿ƒè·³å‘é€`);
            }, 30000);
            
            // ç«‹å³å‘é€ä¸€æ¬¡å¿ƒè·³
            sendReadyUp(currentLobbyId);
        }
    } catch (e) {
        log(`âŒ è§£æž Lobby æ•°æ®å¤±è´¥: ${e.message}`);
    }
}

// å¸¸è§çš„ GC æ¶ˆæ¯ ID æ˜ å°„ï¼ˆç”¨äºŽè°ƒè¯•ï¼‰
const GC_MSG_NAMES = {
    4004: 'GCClientConnectionStatus',
    7038: 'PracticeLobbyCreate',
    7055: 'PracticeLobbyResponse',
    7040: 'PracticeLobbyLeave',
    7044: 'PracticeLobbyJoin',
    7113: 'PracticeLobbyJoinResponse',
    24: 'SOCacheSubscribed',
    25: 'SOSingleObject',
    26: 'SOMultipleObjects',
    7004: 'LobbySnapshot',
    7070: 'ReadyUp',
    7170: 'ReadyUpStatus'
};

function handleGCMessage(appid, msgType, payload) {
    if (appid !== globalSettings.target_app_id) return;
    const cleanMsgType = msgType & ~k_EMsgProtoMask;
    
    // æ‰“å°æ‰€æœ‰æ”¶åˆ°çš„ GC æ¶ˆæ¯
    const msgName = GC_MSG_NAMES[cleanMsgType] || `Unknown`;
    log(`ðŸ“© æ”¶åˆ° GC æ¶ˆæ¯: ${cleanMsgType} (${msgName})`);

    if (cleanMsgType === k_EMsgGCClientConnectionStatus) {
        if (!is_gc_connected) {
            is_gc_connected = true;
            log('âœ… å·²è¿žæŽ¥åˆ° Dota 2 GC');
            
            // å»¶è¿Ÿåˆ›å»ºæˆ¿é—´
            setTimeout(() => {
                createPublicLobby();
            }, 2000);
        }
    }
    // ç›‘å¬ 7055 - æˆ¿é—´åˆ›å»ºå“åº”
    else if (cleanMsgType === 7055) {
        log(`ðŸ“¬ æ”¶åˆ°æˆ¿é—´åˆ›å»ºå“åº” (7055)`);
        // è§£æžå“åº”æŸ¥çœ‹ç»“æžœ
        try {
            // ç®€å•æ‰“å° payload é•¿åº¦
            log(`   å“åº”æ•°æ®é•¿åº¦: ${payload.length} bytes`);
        } catch (e) {}
    }
    // ç›‘å¬ 7004 - Lobby Snapshot
    else if (cleanMsgType === 7004) {
        log(`ðŸ“¬ æ”¶åˆ° Lobby Snapshot (7004)`);
        try {
            const lobby = CSODOTALobby.decode(payload);
            if (lobby.lobbyId) {
                log(`   Lobby ID: ${lobby.lobbyId.toString()}`);
                log(`   æˆ¿é—´å: "${lobby.gameName || ''}"`);
                processLobbyData(payload);
            }
        } catch (e) {
            log(`   è§£æžå¤±è´¥: ${e.message}`);
        }
    }
    else if (cleanMsgType === k_EMsgGCSOCacheSubscribed) {
        log(`ðŸ“¬ æ”¶åˆ° SOCacheSubscribed (24)`);
        try {
            const msg = CMsgSOCacheSubscribed.decode(payload);
            const objects = msg.objects || [];
            log(`   åŒ…å« ${objects.length} ä¸ªå¯¹è±¡`);
            objects.forEach((typeObj) => {
                log(`   - TypeID: ${typeObj.typeId}, æ•°æ®æ•°é‡: ${(typeObj.objectData || []).length}`);
                if (typeObj.typeId === SOCACHE_TYPE_LOBBY) {
                    log(`   ðŸŽ¯ å‘çŽ° Lobby æ•°æ®!`);
                    (typeObj.objectData || []).forEach((data) => {
                        processLobbyData(data);
                    });
                }
            });
        } catch (e) {
            log(`   è§£æžå¤±è´¥: ${e.message}`);
        }
    }
    else if (cleanMsgType === k_EMsgGCSOSingleObject) {
        try {
            const msg = CMsgSOSingleObject.decode(payload);
            log(`ðŸ“¬ æ”¶åˆ° SOSingleObject (25), TypeID: ${msg.typeId}`);
            if (msg.typeId === SOCACHE_TYPE_LOBBY) {
                log(`   ðŸŽ¯ å‘çŽ° Lobby æ•°æ®!`);
                processLobbyData(msg.objectData);
            }
        } catch (e) {}
    }
    else if (cleanMsgType === k_EMsgGCSOMultipleObjects) {
        try {
            const msg = CMsgSOMultipleObjects.decode(payload);
            const modified = msg.objectsModified || [];
            const added = msg.objectsAdded || [];
            log(`ðŸ“¬ æ”¶åˆ° SOMultipleObjects (26), Modified: ${modified.length}, Added: ${added.length}`);
            
            [...modified, ...added].forEach((obj) => {
                if (obj.typeId === SOCACHE_TYPE_LOBBY) {
                    log(`   ðŸŽ¯ å‘çŽ° Lobby æ•°æ®!`);
                    processLobbyData(obj.objectData);
                }
            });
        } catch (e) {}
    }
}

// ç™»å½•
log('æ­£åœ¨ç™»å½• Steam...');

const logOnOptions = {
    accountName: leader.username,
    password: leader.password,
    promptSteamGuardCode: false,
    rememberPassword: true,
    logonID: Math.floor(Math.random() * 1000000),
    shouldRememberPassword: true
};

if (leader.shared_secret && leader.shared_secret.length > 5) {
    try { 
        logOnOptions.twoFactorCode = SteamTotp.generateAuthCode(leader.shared_secret); 
    } catch (err) {}
}

client.logOn(logOnOptions);

client.on('loggedOn', () => {
    log('âœ… Steam ç™»å½•æˆåŠŸ');
    client.setPersona(SteamUser.EPersonaState.Online);
    client.gamesPlayed([globalSettings.target_app_id]);
});

client.on('appLaunched', (appid) => {
    if (appid === globalSettings.target_app_id) {
        log('ðŸŽ® Dota 2 å¯åŠ¨');
        setTimeout(() => {
            log('æ­£åœ¨è¿žæŽ¥ GC...');
            sendHello();
            const helloInterval = setInterval(() => { 
                if(!is_gc_connected) sendHello(); 
                else clearInterval(helloInterval);
            }, 5000);
        }, 2000);
    }
});

client.on('error', (err) => {
    log(`âŒ Steam é”™è¯¯: ${err.message}`);
});

client.on('receivedFromGC', (appid, msgType, payload) => {
    handleGCMessage(appid, msgType, payload);
});

// é€€å‡ºå¤„ç†
process.on('SIGINT', () => {
    console.log("\n\nðŸ›‘ æ­£åœ¨é€€å‡º...");
    
    if (ready_up_heartbeat) {
        clearInterval(ready_up_heartbeat);
    }
    
    // å‘é€ç¦»å¼€æˆ¿é—´å‘½ä»¤
    try {
        client.sendToGC(globalSettings.target_app_id, k_EMsgGCPracticeLobbyLeave | k_EMsgProtoMask, {}, Buffer.alloc(0));
    } catch (e) {}
    
    setTimeout(() => {
        try {
            client.logOff();
        } catch (e) {}
        console.log("âœ… å·²é€€å‡º\n");
        process.exit(0);
    }, 2000);
});

