const SteamUser = require('steam-user');
const SteamTotp = require('steam-totp');
const protobuf = require('protobufjs');
const Long = require('protobufjs').util.Long;
const fs = require('fs');
const path = require('path');

// 1. è·¯å¾„é…ç½®
const projectRoot = path.join(__dirname, '..');
const configPath = path.join(projectRoot, 'config', 'config.json');

// 2. è¯»å–é…ç½®
let config;
try {
    if (fs.existsSync(configPath)) {
        const rawContent = fs.readFileSync(configPath, 'utf8').replace(/^\uFEFF/, '');
        config = JSON.parse(rawContent);
    } else {
        console.error("âŒ æ‰¾ä¸åˆ°é…ç½®æ–‡ä»¶: config/config.json");
        process.exit(1);
    }
} catch (e) {
    console.error("âŒ è¯»å–é…ç½®å¤±è´¥: " + e.message);
    process.exit(1);
}

// è·å–è´¦å·
let account;
if (config.fleets[0].followers && config.fleets[0].followers.length > 0) {
    account = config.fleets[0].followers[0];
    console.log("[System] é€‰æ‹© Follower è´¦å·è¿›è¡ŒæŸ¥è¯¢ (é¿å…ä¸»å·ä»¤ç‰ŒéªŒè¯)");
} else {
    account = config.fleets[0].leader;
    if (Array.isArray(account)) {
        account = account[0];
    }
    console.log("[System] é€‰æ‹© Leader è´¦å·è¿›è¡ŒæŸ¥è¯¢");
}

// è§£æå‘½ä»¤è¡Œå‚æ•°
// ç”¨æ³•: node list_lobbies.js [game_id|all]
// - ä¸ä¼ å‚æ•°æˆ–ä¼  "all": æŸ¥è¯¢æ‰€æœ‰æ¸¸æˆ
// - ä¼ å…·ä½“ game_id: åªæŸ¥è¯¢è¯¥æ¸¸æˆ
const arg = process.argv[2];
let targetGameId = null;
let queryAll = false;

if (!arg || arg.toLowerCase() === 'all') {
    queryAll = true;
    console.log("[System] æ¨¡å¼: æŸ¥è¯¢æ‰€æœ‰æ¸¸å»Šæ¸¸æˆæˆ¿é—´");
} else {
    targetGameId = arg.toString().trim();
    console.log(`[System] æ¨¡å¼: æŸ¥è¯¢æŒ‡å®šæ¸¸æˆ ID: ${targetGameId}`);
}

console.log(`[System] ä½¿ç”¨è´¦å·: ${account.username} è¿›è¡ŒæŸ¥è¯¢...`);

// 3. æ¶ˆæ¯ ID å®šä¹‰
const k_EMsgGCClientHello = 4006;
const k_EMsgGCClientConnectionStatus = 4004;
const k_EMsgGCJoinableCustomLobbiesRequest = 7468;
const k_EMsgGCJoinableCustomLobbiesResponse = 7469;
const k_EMsgProtoMask = 0x80000000;

// 4. åŠ è½½ Proto
let CMsgClientHello, CMsgJoinableCustomLobbiesRequest, CMsgJoinableCustomLobbiesResponse;

try {
    const root = new protobuf.Root();
    root.resolvePath = function(origin, target) {
        let checkPath = path.join(projectRoot, "Protobufs", target);
        if (fs.existsSync(checkPath)) return checkPath;
        checkPath = path.join(projectRoot, "Protobufs", "dota2", target);
        if (fs.existsSync(checkPath)) return checkPath;
        checkPath = path.join(projectRoot, "Protobufs", "google", "protobuf", target);
        if (fs.existsSync(checkPath)) return checkPath;
        return target;
    };

    root.loadSync(path.join(projectRoot, "Protobufs/google/protobuf/descriptor.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/networkbasetypes.proto")); 
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/gcsdk_gcmessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client_match_management.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client.proto"));

    CMsgClientHello = root.lookupType("CMsgClientHello");
    CMsgJoinableCustomLobbiesRequest = root.lookupType("CMsgJoinableCustomLobbiesRequest");
    CMsgJoinableCustomLobbiesResponse = root.lookupType("CMsgJoinableCustomLobbiesResponse");

} catch (e) {
    console.error("âŒ Proto åŠ è½½å¤±è´¥: " + e.message);
    process.exit(1);
}

// 5. åˆå§‹åŒ– Steam Client
const sharedDataPath = config.global_settings.shared_steam_data_path || "../shared_steam_data";
const steamDataDir = path.resolve(projectRoot, sharedDataPath);

if (!fs.existsSync(steamDataDir)) {
    fs.mkdirSync(steamDataDir, { recursive: true });
}

const client = new SteamUser({
    dataDirectory: steamDataDir
});

// 6. äº‹ä»¶ç›‘å¬
client.on('loggedOn', () => {
    console.log('âœ… Steam ç™»å½•æˆåŠŸ');
    client.setPersona(SteamUser.EPersonaState.Online);
    client.gamesPlayed([570]);
});

client.on('appLaunched', (appid) => {
    if (appid === 570) {
        console.log('ğŸ® Dota 2 å·²å¯åŠ¨ï¼Œæ­£åœ¨è¿æ¥ GC...');
        setTimeout(connectGC, 2000);
    }
});

client.on('error', (err) => {
    console.error('âŒ Steam é”™è¯¯:', err.message);
    process.exit(1);
});

let is_gc_connected = false;

// Region ID æ˜ å°„
const RegionMap = {
    0: "Auto", 1: "US West", 2: "US East", 3: "Europe", 5: "Singapore", 
    6: "Dubai", 7: "Australia", 8: "Stockholm", 9: "Austria", 
    10: "Brazil", 11: "South Africa", 12: "PW Telecom", 13: "PW Unicom", 
    14: "Chile", 15: "Peru", 16: "India", 17: "Reg:17", 18: "Reg:18", 
    19: "Japan", 20: "Reg:20", 25: "PW Tianjin"
};

client.on('receivedFromGC', (appid, msgType, payload) => {
    if (appid !== 570) return;
    const cleanMsgType = msgType & ~k_EMsgProtoMask;

    if (cleanMsgType === k_EMsgGCClientConnectionStatus) {
        if (!is_gc_connected) {
            is_gc_connected = true;
            console.log('âœ… GC è¿æ¥æˆåŠŸï¼');
            requestLobbies();
        }
    } 
    else if (cleanMsgType === k_EMsgGCJoinableCustomLobbiesResponse) {
        console.log('\nğŸ“¡ æ”¶åˆ°æˆ¿é—´åˆ—è¡¨å“åº”...');
        try {
            const response = CMsgJoinableCustomLobbiesResponse.decode(payload);
            const lobbies = response.lobbies || [];
            
            if (lobbies.length === 0) {
                console.log(`ğŸ“­ å½“å‰æ²¡æœ‰å…¬å¼€æˆ¿é—´ã€‚`);
                console.log("\nâœ… æŸ¥è¯¢å®Œæˆï¼Œ3ç§’åé€€å‡º...");
                setTimeout(() => process.exit(0), 3000);
                return;
            }
            
            // æ”¶é›†æ‰€æœ‰å”¯ä¸€çš„æ¸¸æˆ ID
            const allGameIds = lobbies.map(l => l.customGameId ? l.customGameId.toString() : null).filter(Boolean);
            
            // ç»Ÿè®¡ä¿¡æ¯
            const totalPlayers = lobbies.reduce((sum, l) => sum + (l.memberCount || 0), 0);
            const fullRooms = lobbies.filter(l => (l.memberCount || 0) >= 20).length;
            const uniqueGames = new Set(allGameIds).size;
            
            const modeStr = queryAll ? "æ‰€æœ‰æ¸¸å»Šæ¸¸æˆ" : `æ¸¸æˆ ID: ${targetGameId}`;
            const header = `æŸ¥è¯¢: ${modeStr} | æˆ¿é—´: ${lobbies.length} | æ¸¸æˆ: ${uniqueGames} | ç©å®¶: ${totalPlayers} | é«˜äººæ°”(>=20): ${fullRooms}\n` +
                         "=".repeat(175) + "\n" +
                         `| ${"Lobby ID".padEnd(18)} | ${"Game ID".padEnd(15)} | ${"Room Name".padEnd(25)} | ${"Map".padEnd(12)} | ${"Region".padEnd(12)} | ${"Memb".padEnd(4)} | ${"Time".padEnd(8)} | ${"Leader (Name/ID)".padEnd(35)} | ${"Pass".padEnd(4)} |\n` +
                         "-".repeat(175);
            
            console.log('\n' + header);
            
            lobbies.forEach(lobby => {
                const lobbyId = lobby.lobbyId ? lobby.lobbyId.toString() : "Unknown";
                
                // æ¸¸æˆ IDï¼ˆç›´æ¥æ˜¾ç¤ºï¼Œä¸å¸¦å‰ç¼€ï¼‰
                const gameId = lobby.customGameId ? lobby.customGameId.toString() : "Unknown";

                // æˆ¿é—´å
                let name = lobby.lobbyName || "Unknown";
                name = name.replace(/[\r\n]/g, '');
                const displayName = name.length > 23 ? name.substring(0, 20) + "..." : name;

                // åœ°å›¾å
                let mapName = lobby.customMapName || "-";
                if (mapName.length > 11) mapName = mapName.substring(0, 9) + "...";
                
                // åœ°åŒº
                const regionId = lobby.serverRegion || 0;
                const regionName = RegionMap[regionId] || `Reg:${regionId}`;

                const count = lobby.memberCount || 0;
                
                // åˆ›å»ºæ—¶é—´
                let timeStr = "-";
                if (lobby.lobbyCreationTime) {
                    const now = Math.floor(Date.now() / 1000);
                    const diff = now - lobby.lobbyCreationTime;
                    if (diff < 60) timeStr = `${diff}s`;
                    else if (diff < 3600) timeStr = `${Math.floor(diff / 60)}m`;
                    else timeStr = `${Math.floor(diff / 3600)}h${Math.floor((diff % 3600) / 60)}m`;
                }

                // Leader (Name + ID)
                const leaderId = lobby.leaderAccountId ? lobby.leaderAccountId.toString() : "Unknown";
                let leaderName = lobby.leaderName || "";
                if (leaderName.length > 15) leaderName = leaderName.substring(0, 12) + "...";
                
                let leaderStr = leaderName ? `${leaderName} (${leaderId})` : leaderId;
                if (leaderStr.length > 33) leaderStr = leaderStr.substring(0, 30) + "...";
                
                const hasPass = lobby.hasPassKey ? "Yes" : "No";
                
                const line = `| ${lobbyId.padEnd(18)} | ${gameId.padEnd(15)} | ${displayName.padEnd(25)} | ${mapName.padEnd(12)} | ${regionName.padEnd(12)} | ${count.toString().padEnd(4)} | ${timeStr.padEnd(8)} | ${leaderStr.padEnd(35)} | ${hasPass.padEnd(4)} |`;
                console.log(line);
            });
            console.log("=".repeat(175));
            
            // ä¿å­˜ä¸º CSV æ–‡ä»¶
            const dataDir = path.join(projectRoot, 'data');
            if (!fs.existsSync(dataDir)) {
                fs.mkdirSync(dataDir, { recursive: true });
            }
            
            // ç”Ÿæˆæ—¶é—´æˆ³æ–‡ä»¶å
            const now = new Date();
            const timestamp = `${now.getFullYear()}${String(now.getMonth() + 1).padStart(2, '0')}${String(now.getDate()).padStart(2, '0')}_${String(now.getHours()).padStart(2, '0')}${String(now.getMinutes()).padStart(2, '0')}${String(now.getSeconds()).padStart(2, '0')}`;
            const csvFile = path.join(dataDir, `lobbies_${timestamp}.csv`);
            
            // ç”Ÿæˆ CSV å†…å®¹
            const csvHeader = 'Lobby ID,Game ID,Room Name,Map,Region,Members,Time,Leader Name,Leader ID,Has Password\n';
            let csvContent = csvHeader;
            
            lobbies.forEach(lobby => {
                const lobbyId = lobby.lobbyId ? lobby.lobbyId.toString() : "";
                const gameId = lobby.customGameId ? lobby.customGameId.toString() : "";
                const roomName = (lobby.lobbyName || "").replace(/[\r\n,]/g, ' ');
                const mapName = lobby.customMapName || "";
                const regionId = lobby.serverRegion || 0;
                const regionName = RegionMap[regionId] || `Reg:${regionId}`;
                const members = lobby.memberCount || 0;
                
                let timeStr = "";
                if (lobby.lobbyCreationTime) {
                    const nowSec = Math.floor(Date.now() / 1000);
                    const diff = nowSec - lobby.lobbyCreationTime;
                    if (diff < 60) timeStr = `${diff}s`;
                    else if (diff < 3600) timeStr = `${Math.floor(diff / 60)}m`;
                    else timeStr = `${Math.floor(diff / 3600)}h${Math.floor((diff % 3600) / 60)}m`;
                }
                
                const leaderName = (lobby.leaderName || "").replace(/,/g, ' ');
                const leaderId = lobby.leaderAccountId ? lobby.leaderAccountId.toString() : "";
                const hasPass = lobby.hasPassKey ? "Yes" : "No";
                
                csvContent += `${lobbyId},${gameId},"${roomName}",${mapName},${regionName},${members},${timeStr},"${leaderName}",${leaderId},${hasPass}\n`;
            });
            
            fs.writeFileSync(csvFile, '\ufeff' + csvContent, 'utf8'); // æ·»åŠ  BOM ä»¥æ”¯æŒ Excel ä¸­æ–‡
            console.log(`\nğŸ“„ ç»“æœå·²ä¿å­˜åˆ°: ${csvFile}`);
            
            console.log("\nâœ… æŸ¥è¯¢å®Œæˆï¼Œ3ç§’åé€€å‡º...");
            setTimeout(() => process.exit(0), 3000);
            
        } catch (e) {
            console.error("âŒ è§£æå“åº”å¤±è´¥:", e);
        }
    }
});

// 7. åŠŸèƒ½å‡½æ•°
function connectGC() {
    const payload = { client_session_id: 0, engine: 2, client_launcher: 0 };
    const message = CMsgClientHello.create(payload);
    const buffer = CMsgClientHello.encode(message).finish();
    client.sendToGC(570, k_EMsgGCClientHello | k_EMsgProtoMask, {}, buffer);
    
    const helloInterval = setInterval(() => {
        if (!is_gc_connected) {
            client.sendToGC(570, k_EMsgGCClientHello | k_EMsgProtoMask, {}, buffer);
        } else {
            clearInterval(helloInterval);
        }
    }, 5000);
}

function requestLobbies() {
    let payload = { server_region: 0 };
    
    if (queryAll) {
        console.log(`ğŸ” æ­£åœ¨æŸ¥è¯¢æ‰€æœ‰æ¸¸å»Šæ¸¸æˆçš„æˆ¿é—´åˆ—è¡¨...`);
    } else {
        const gameIdLong = Long.fromString(targetGameId, true);
        payload.custom_game_id = gameIdLong;
        console.log(`ğŸ” æ­£åœ¨æŸ¥è¯¢æ¸¸æˆ ID ${targetGameId} çš„æˆ¿é—´åˆ—è¡¨...`);
    }

    try {
        const message = CMsgJoinableCustomLobbiesRequest.create(payload);
        const buffer = CMsgJoinableCustomLobbiesRequest.encode(message).finish();
        
        client.sendToGC(570, k_EMsgGCJoinableCustomLobbiesRequest | k_EMsgProtoMask, {}, buffer);
        
        setTimeout(() => {
            console.log("âš ï¸ æŸ¥è¯¢è¶…æ—¶ (30ç§’æœªæ”¶åˆ°å“åº”)");
            process.exit(0);
        }, 30000);
        
    } catch (err) {
        console.error("âŒ å‘é€è¯·æ±‚å¤±è´¥:", err);
    }
}

// 8. å¯åŠ¨ç™»å½•
const logOnOptions = {
    accountName: account.username,
    password: account.password,
    promptSteamGuardCode: false,
    rememberPassword: true
};

if (account.shared_secret) {
    try {
        logOnOptions.twoFactorCode = SteamTotp.generateAuthCode(account.shared_secret);
    } catch (e) {}
}

console.log("ğŸš€ å¼€å§‹ç™»å½• Steam...");
client.logOn(logOnOptions);
