/**
 * æŒ‚æœºä¸»å·æµ‹è¯•å·¥å…·
 * 
 * åŠŸèƒ½ï¼šæµ‹è¯•è´¦å·æ˜¯å¦å¯ä»¥ä½œä¸ºæŒ‚æœºæˆ¿ä¸»å·
 * - ç™»å½• Steamï¼ˆæ”¯æŒæ‰‹åŠ¨è¾“å…¥éªŒè¯ç ï¼‰
 * - è¿æ¥ GC
 * - åˆ›å»ºä¸€ä¸ªæˆ¿é—´
 * - ç­‰å¾…ç”¨æˆ·å‘é€ "leave" æˆ– "exit" å‘½ä»¤é€€å‡º
 * 
 * ç”¨æ³•ï¼š
 * node commands/test_leader.js <username> <password> [proxy] [shared_secret] [gameId]
 */

const SteamUser = require('steam-user');
const SteamTotp = require('steam-totp');
const protobuf = require('protobufjs');
const Long = require('protobufjs').util.Long;
const fs = require('fs');
const path = require('path');
const readline = require('readline');

console.log("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
console.log("â•‘ æŒ‚æœºä¸»å·æµ‹è¯•å·¥å…· - éªŒè¯è´¦å·æ˜¯å¦å¯ä½œä¸ºæˆ¿ä¸»å·");
console.log("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

// é¡¹ç›®æ ¹ç›®å½•
const projectRoot = path.join(__dirname, '..');

// GC æ¶ˆæ¯ ID
const k_EMsgGCClientHello = 4006;
const k_EMsgGCClientConnectionStatus = 4004;
const k_EMsgGCAbandonCurrentGame = 7035;
const k_EMsgGCPracticeLobbyCreate = 7038;
const k_EMsgGCPracticeLobbyLeave = 7040;
const k_EMsgProtoMask = 0x80000000;
const k_EMsgGCSOCacheSubscribed = 24;
const k_EMsgGCSOSingleObject = 25;
const k_EMsgGCSOMultipleObjects = 26;
const SOCACHE_TYPE_LOBBY = 2004;

// Proto å®šä¹‰
let CMsgClientHello, CMsgPracticeLobbyCreate, CMsgPracticeLobbySetDetails, CSODOTALobby;
let CMsgSOSingleObject, CMsgSOMultipleObjects, CMsgSOCacheSubscribed;

try {
    const root = new protobuf.Root();
    root.resolvePath = function(origin, target) {
        if (fs.existsSync(target)) return target;
        const p = path.join(projectRoot, "Protobufs", target);
        if (fs.existsSync(p)) return p;
        const p2 = path.join(projectRoot, "Protobufs", "dota2", target);
        if (fs.existsSync(p2)) return p2;
        return target;
    };

    root.loadSync(path.join(projectRoot, "Protobufs/google/protobuf/descriptor.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/networkbasetypes.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/network_connection.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/steammessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/gcsdk_gcmessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_shared_enums.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_client_enums.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/base_gcmessages.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_common_lobby.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client_match_management.proto"));
    root.loadSync(path.join(projectRoot, "Protobufs/dota2/dota_gcmessages_client.proto"));

    CMsgClientHello = root.lookupType("CMsgClientHello");
    CMsgPracticeLobbyCreate = root.lookupType("CMsgPracticeLobbyCreate");
    CMsgPracticeLobbySetDetails = root.lookupType("CMsgPracticeLobbySetDetails");
    CSODOTALobby = root.lookupType("CSODOTALobby");
    CMsgSOSingleObject = root.lookupType("CMsgSOSingleObject");
    CMsgSOMultipleObjects = root.lookupType("CMsgSOMultipleObjects");
    CMsgSOCacheSubscribed = root.lookupType("CMsgSOCacheSubscribed");

    console.log("âœ… Proto åŠ è½½æˆåŠŸ\n");
} catch (e) {
    console.error("âŒ Proto åŠ è½½å¤±è´¥: " + e.message);
    process.exit(1);
}

// è§£æå‚æ•°
const args = process.argv.slice(2);
if (args.length < 2) {
    console.log("ç”¨æ³•: node test_leader.js <username> <password> [proxy] [shared_secret]");
    console.log("ç¤ºä¾‹: node test_leader.js myaccount mypassword http://user:pass@ip:port");
    process.exit(1);
}

const username = args[0];
const password = args[1];
const proxy = args[2] && args[2] !== '' ? args[2] : null;  // ç©ºå­—ç¬¦ä¸²è§†ä¸ºæ— ä»£ç†
const sharedSecret = args[3] && args[3] !== '' ? args[3] : null;  // ç©ºå­—ç¬¦ä¸²è§†ä¸ºæ—  secret
const customGameIdArg = args[4] || null;  // ä»å‘½ä»¤è¡Œä¼ å…¥çš„æ¸¸æˆID

console.log(`ğŸ“‹ æµ‹è¯•è´¦å·: ${username}`);
if (proxy) console.log(`ğŸ“‹ ä½¿ç”¨ä»£ç†: ${proxy.replace(/:[^:@]+@/, ':***@')}`);
if (sharedSecret) console.log(`ğŸ“‹ å·²é…ç½® shared_secret (è‡ªåŠ¨2FA)`);
console.log("");

// åŠ è½½æ¸¸æˆé…ç½®ï¼ˆä» config_leaders.json è·å– custom_game_id ç­‰ï¼‰
let gameConfig = {
    target_app_id: 570,
    custom_game_id: "3586896069",
    lobby_password: "test123",
    server_regions: [1, 2, 5, 7, 14, 19]
};

try {
    const leadersConfigPath = path.join(projectRoot, 'config', 'config_leaders.json');
    if (fs.existsSync(leadersConfigPath)) {
        const config = JSON.parse(fs.readFileSync(leadersConfigPath, 'utf8').replace(/^\uFEFF/, ''));
        if (config.global_settings) {
            gameConfig = { ...gameConfig, ...config.global_settings };
        }
    }
} catch (e) {
    console.log("âš ï¸ æ— æ³•åŠ è½½ config_leaders.jsonï¼Œä½¿ç”¨é»˜è®¤é…ç½®");
}

// å¦‚æœå‘½ä»¤è¡Œä¼ å…¥äº†æ¸¸æˆIDï¼Œè¦†ç›–é…ç½®
if (customGameIdArg) {
    gameConfig.custom_game_id = customGameIdArg;
    console.log(`ğŸ“‹ ä½¿ç”¨å‘½ä»¤è¡ŒæŒ‡å®šçš„æ¸¸æˆID: ${customGameIdArg}`);
}

// å…±äº«æ•°æ®ç›®å½•
const sharedDataPath = gameConfig.shared_steam_data_path || "../shared_steam_data";
const steamDataDir = path.resolve(projectRoot, sharedDataPath);
if (!fs.existsSync(steamDataDir)) {
    fs.mkdirSync(steamDataDir, { recursive: true });
}

// çŠ¶æ€
let is_gc_connected = false;
let currentLobbyId = null;
let state = 'INIT'; // INIT -> LOGGING_IN -> ONLINE -> CREATING -> IN_LOBBY

// CRC æ•°æ®ï¼ˆä»ç°æœ‰é…ç½®è·å–ï¼‰
const knownCrc = "1396649696593898392";
const knownTimestamp = 1763646905;

// åˆ›å»º Steam å®¢æˆ·ç«¯
const steamOptions = { dataDirectory: steamDataDir };
if (proxy) {
    steamOptions.httpProxy = proxy;
}
const client = new SteamUser(steamOptions);

// readline ç”¨äºè¯»å–éªŒè¯ç 
const rl = readline.createInterface({
    input: process.stdin,
    output: process.stdout
});

// ç›‘å¬ stdin å‘½ä»¤
process.stdin.setEncoding('utf8');
process.stdin.on('data', (data) => {
    const cmd = data.toString().trim().toLowerCase();
    
    if (cmd === 'leave' || cmd === 'exit' || cmd === 'quit') {
        console.log("\nğŸšª æ”¶åˆ°é€€å‡ºå‘½ä»¤ï¼Œæ­£åœ¨é€€å‡ºæˆ¿é—´...");
        leaveAndExit();
    }
});

// Steam äº‹ä»¶
client.on('loggedOn', () => {
    console.log(`âœ… Steam ç™»å½•æˆåŠŸ!`);
    console.log(`   SteamID: ${client.steamID.getSteamID64()}`);
    state = 'ONLINE';
    client.setPersona(SteamUser.EPersonaState.Online);
    client.gamesPlayed([gameConfig.target_app_id]);
});

client.on('appLaunched', (appid) => {
    if (appid === gameConfig.target_app_id) {
        console.log("ğŸ® Dota 2 å·²å¯åŠ¨");
        setTimeout(connectGC, 2000);
    }
});

client.on('error', (err) => {
    console.error(`âŒ Steam é”™è¯¯: ${err.message}`);
    process.exit(1);
});

// Steam Guard éªŒè¯ç 
client.on('steamGuard', (domain, callback) => {
    console.log(`[STEAM_GUARD]${domain || 'Email'}`);
    console.log(`ğŸ” éœ€è¦ Steam Guard éªŒè¯ç  (${domain || 'Email'})`);
    console.log("è¯·åœ¨ Web ç•Œé¢è¾“å…¥éªŒè¯ç ...\n");
    
    rl.question('', (code) => {
        console.log(`ğŸ“ æ”¶åˆ°éªŒè¯ç : ${code.trim()}`);
        callback(code.trim());
    });
});

// GC æ¶ˆæ¯å¤„ç†
client.on('receivedFromGC', (appid, msgType, payload) => {
    if (appid !== gameConfig.target_app_id) return;
    const cleanMsgType = msgType & ~k_EMsgProtoMask;

    if (cleanMsgType === k_EMsgGCClientConnectionStatus) {
        if (!is_gc_connected) {
            is_gc_connected = true;
            console.log("âœ… GC è¿æ¥æˆåŠŸ!");
            
            // æ¸…ç†æ®‹ç•™
            client.sendToGC(gameConfig.target_app_id, k_EMsgGCAbandonCurrentGame | k_EMsgProtoMask, {}, Buffer.alloc(0));
            
            // åˆ›å»ºæˆ¿é—´
            setTimeout(createRoom, 2000);
        }
    }
    else if (cleanMsgType === k_EMsgGCSOCacheSubscribed) {
        try {
            const msg = CMsgSOCacheSubscribed.decode(payload);
            (msg.objects || []).forEach((typeObj) => {
                if (typeObj.typeId === SOCACHE_TYPE_LOBBY) {
                    (typeObj.objectData || []).forEach((data) => {
                        processLobbyData(data);
                    });
                }
            });
        } catch (e) {}
    }
    else if (cleanMsgType === k_EMsgGCSOSingleObject) {
        try {
            const msg = CMsgSOSingleObject.decode(payload);
            if (msg.typeId === SOCACHE_TYPE_LOBBY) {
                processLobbyData(msg.objectData);
            }
        } catch (e) {}
    }
    else if (cleanMsgType === k_EMsgGCSOMultipleObjects) {
        try {
            const msg = CMsgSOMultipleObjects.decode(payload);
            [...(msg.objectsModified || []), ...(msg.objectsAdded || [])].forEach((obj) => {
                if (obj.typeId === SOCACHE_TYPE_LOBBY) {
                    processLobbyData(obj.objectData);
                }
            });
        } catch (e) {}
    }
});

function connectGC() {
    console.log("ğŸ“¡ è¿æ¥ GC...");
    sendHello();
    
    const helloInterval = setInterval(() => {
        if (!is_gc_connected) sendHello();
        else clearInterval(helloInterval);
    }, 5000);
}

function sendHello() {
    try {
        const payload = { client_session_id: 0, engine: 2, client_launcher: 0 };
        const message = CMsgClientHello.create(payload);
        const buffer = CMsgClientHello.encode(message).finish();
        client.sendToGC(gameConfig.target_app_id, k_EMsgGCClientHello | k_EMsgProtoMask, {}, buffer);
    } catch (err) {}
}

function createRoom() {
    if (state === 'IN_LOBBY') {
        console.log("âš ï¸ å·²åœ¨æˆ¿é—´ä¸­");
        return;
    }
    
    state = 'CREATING';
    console.log("\nğŸ  æ­£åœ¨åˆ›å»ºæµ‹è¯•æˆ¿é—´...");
    
    try {
        const gameIdLong = Long.fromString(gameConfig.custom_game_id, true);
        const regions = gameConfig.server_regions || [14];
        const selectedRegion = regions[Math.floor(Math.random() * regions.length)];
        
        const detailsPayload = {
            customGameId: gameIdLong,
            gameName: "",
            serverRegion: selectedRegion,
            gameMode: 15,
            customMaxPlayers: 23,
            customMinPlayers: 1,
            allowSpectating: true,
            allchat: true,
            fillWithBots: false,
            allowCheats: false,
            visibility: 0,
            passKey: gameConfig.lobby_password || "test123",
            customMapName: "zudui_team_map",
            customGameCrc: Long.fromString(knownCrc, true),
            customGameTimestamp: knownTimestamp
        };
        const lobbyDetails = CMsgPracticeLobbySetDetails.create(detailsPayload);

        const createPayload = {
            searchKey: "",
            passKey: gameConfig.lobby_password || "test123",
            clientVersion: 0,
            lobbyDetails: lobbyDetails
        };

        const message = CMsgPracticeLobbyCreate.create(createPayload);
        const buffer = CMsgPracticeLobbyCreate.encode(message).finish();
        
        client.sendToGC(gameConfig.target_app_id, k_EMsgGCPracticeLobbyCreate | k_EMsgProtoMask, {}, buffer);
        
        console.log(`   æ¸¸æˆID: ${gameConfig.custom_game_id}`);
        console.log(`   åŒºåŸŸ: ${selectedRegion}`);
        console.log(`   å¯†ç : ${gameConfig.lobby_password || "test123"}`);
        
        // åˆ›å»ºè¶…æ—¶æ£€æµ‹
        setTimeout(() => {
            if (state === 'CREATING') {
                console.log("âŒ åˆ›å»ºæˆ¿é—´è¶…æ—¶ (30ç§’)");
                console.log("ğŸ’¡ å¯èƒ½åŸå› ï¼šæ¸¸æˆIDæ— æ•ˆã€è´¦å·è¢«é™åˆ¶ã€ç½‘ç»œé—®é¢˜");
                leaveAndExit(1);
            }
        }, 30000);
        
    } catch (err) {
        console.error(`âŒ åˆ›å»ºæˆ¿é—´å¤±è´¥: ${err.message}`);
        leaveAndExit(1);
    }
}

function processLobbyData(objectData) {
    if (!objectData || objectData.length === 0) return;
    
    try {
        const lobby = CSODOTALobby.decode(objectData);
        const lobbyId = lobby.lobbyId;
        const memberCount = (lobby.allMembers || []).length;
        
        if (lobbyId && state === 'CREATING') {
            currentLobbyId = lobbyId;
            state = 'IN_LOBBY';
            
            console.log("âœ… æˆ¿é—´åˆ›å»ºæˆåŠŸ!");
            console.log(`   æˆ¿é—´ID: ${lobbyId.toString()}`);
            console.log("\nğŸ’¡ è¾“å…¥ 'leave' æˆ– 'exit' é€€å‡ºæˆ¿é—´å¹¶ç»“æŸæµ‹è¯•");
            console.log("   æˆ–è€…åœ¨ Web ç•Œé¢ç‚¹å‡»ã€Œé€€å‡ºæˆ¿é—´ã€æŒ‰é’®\n");
            
            // è¾“å‡ºç‰¹æ®Šä¿¡å·ï¼Œé€šçŸ¥å‰ç«¯è§¦å‘æŸ¥è¯¢æˆ¿é—´
            console.log(`[ROOM_CREATED]${lobbyId.toString()}`);
        }
    } catch (e) {}
}

function leaveAndExit(code = 0) {
    console.log("ğŸ§¹ æ¸…ç†ä¸­...");
    
    try {
        if (currentLobbyId) {
            client.sendToGC(gameConfig.target_app_id, k_EMsgGCPracticeLobbyLeave | k_EMsgProtoMask, {}, Buffer.alloc(0));
            console.log("âœ… å·²é€€å‡ºæˆ¿é—´");
        }
        client.sendToGC(gameConfig.target_app_id, k_EMsgGCAbandonCurrentGame | k_EMsgProtoMask, {}, Buffer.alloc(0));
    } catch (err) {}
    
    setTimeout(() => {
        try {
            client.logOff();
        } catch (err) {}
        
        console.log("ğŸ‘‹ æµ‹è¯•ç»“æŸ");
        process.exit(code);
    }, 2000);
}

// å¼€å§‹ç™»å½•
console.log("ğŸ” æ­£åœ¨ç™»å½• Steam...\n");
state = 'LOGGING_IN';

const logOnOptions = {
    accountName: username,
    password: password,
    rememberPassword: true,
    logonID: Math.floor(Math.random() * 1000000)
};

// å¦‚æœæœ‰ shared_secretï¼Œè‡ªåŠ¨ç”Ÿæˆ 2FA
if (sharedSecret) {
    try {
        logOnOptions.twoFactorCode = SteamTotp.generateAuthCode(sharedSecret);
        console.log("ğŸ” å·²è‡ªåŠ¨ç”Ÿæˆ 2FA éªŒè¯ç \n");
    } catch (e) {
        console.error(`âŒ ç”Ÿæˆ 2FA å¤±è´¥: ${e.message}`);
        console.log("ğŸ’¡ å°†ç­‰å¾…æ‰‹åŠ¨è¾“å…¥éªŒè¯ç \n");
    }
}

client.logOn(logOnOptions);

// å¼‚å¸¸å¤„ç†
process.on('uncaughtException', (err) => {
    console.error(`âŒ æœªæ•è·å¼‚å¸¸: ${err.message}`);
    leaveAndExit(1);
});

process.on('SIGINT', () => {
    console.log("\nâš ï¸ æ”¶åˆ°ä¸­æ–­ä¿¡å·");
    leaveAndExit(0);
});

